# templates

./: CLAUDE.md  LICENSE  README.md  flake.nix
python-ai-starter/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  devshell.toml  flake.nix  pyproject.toml
python-ai-starter/src/myproject/: __init__.py  main.py
python-ai-starter/tests/myproject/: __init__.py  test_main.py
scala-calico-webapp-starter/: .gitignore  .scalafmt.conf  README.md  build.mill  devshell.toml  flake.nix  package-lock.json  package.json  setup.sh
scala-calico-webapp-starter/.github/workflows/: ci.yml
scala-calico-webapp-starter/backend/resources/db/migration/: V1__init.sql
scala-calico-webapp-starter/backend/src/com/example/mywebapp/: Config.scala  Main.scala
scala-calico-webapp-starter/backend/src/com/example/mywebapp/db/: Database.scala  Repositories.scala
scala-calico-webapp-starter/backend/src/com/example/mywebapp/html/: Pages.scala
scala-calico-webapp-starter/tailwind/: app.css
scala-mill-library-starter/: .gitignore  .scalafmt.conf  LICENSE  README.md  build.mill  devshell.toml  flake.nix  setup.sh
scala-mill-library-starter/.claude/commands/: setup.md
scala-mill-library-starter/.github/workflows/: ci.yml  release.yml
scala-mill-library-starter/docs/: index.md
scala-mill-library-starter/mylibrary-cats-effect/src/: MyLibraryIO.scala
scala-mill-library-starter/mylibrary-cats-effect/test/src/: MyLibraryIOTest.scala
scala-mill-library-starter/mylibrary/src/: MyLibrary.scala
scala-mill-library-starter/mylibrary/test/src/: MyLibraryTest.scala
scala-mill-library-starter/scripts/: LaikaBuild.scala  LaikaPreview.scala
scala-sbt-starter/: README.md  devshell.toml  flake.nix
(+5 files in other folders)
